--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
   </head>
   <body>
+	<!--
+
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/jacobdufault/seniordesign">View On GitHub</a></li>
@@ -25,51 +27,82 @@
           <li class="downloads"><a href="https://github.com/jacobdufault/seniordesign/tarball/master">TAR</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
-      </div><!-- end header -->
+      </div>
 
+		-->
+	
     <div class="wrapper">
 
       <section>
         <div id="title">
           <h1>Senior Design</h1>
-          <p></p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/jacobdufault">jacobdufault</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+          <p></p>	  
         </div>
 
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+		<h3>Project Overview</h3>
+			<table>
+				<tr>
+					<th>Project Name</th>
+					<td>Better Tower Defense</td>
+				</tr>
+				<tr>
+					<th>Team Members</th>
+					<td>Jacob Dufault</td>				
+				</tr>
+				<tr>
+					<th>CS Faculty Sponser</th>
+					<td>Dr. Bernhard</td>				
+				</tr>			
+			</table>
+	
+		<h3>First Semester (Fall 2013)</h3>
+			<table>
+				<tr>
+					<th>Plan (September 4th)</th>
+					<td><a href="uploads/jacobdufault_plan_presentation_9_4_2013.pdf">Presentation</a> | Plan (<a href="uploads/jacobdufault_plan_9_4_2013_updated.pdf">Updated</a>, <a href="uploads/jacobdufault_plan_9_4_2013_signed.pdf">Signed</a>)</td>
+				</tr>
+				<tr>
+					<th>Milestone 1 (September 30th)</th>
+					<td>Presentation | Documents</td>
+				</tr>
+				<tr>
+					<th>Milestone 2 (October 28th)</th>
+					<td>Presentation | Progress Evaluation</td>
+				</tr>
+				<tr>
+					<th>Milestone 3 (November 25th)</th>
+					<td>Presentation | Progress Evaluation</td>				
+				</tr>				
+			</table>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+		<!--
+		<h3>Second Semester (Spring 2013)</h3>
+			<table>
+				<tr>
+					<th>Plan (September 4th)</th>
+					<td>Plan, Presentation</td>
+				</tr>
+				<tr>
+					<th>Milestone 1</th>
+					<td>Presentation, Documents</td>
+				</tr>
+				<tr>
+					<th>Milestone 2</th>
+					<td>Presentation, Progress Evaluation, Poster</td>
+				</tr>
+				<tr>
+					<th>Milestone 3</th>
+					<td>Presentation, Progress Evaluation</td>				
+				</tr>				
+			</table>
+		-->
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+	<hr />
+	<div id="credits">
+		<span>Project maintained by <a href="https://github.com/jacobdufault">jacobdufault</a> | Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+	</div>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
+	</section>
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
