Update for milestone 1

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</tr>
 				<tr>
 					<th>Milestone 1 (September 30th)</th>
-					<td>Presentation | Documents</td>
+					<td><a href="uploads/jacobdufault_milestone_1_presentation.pdf">Presentation</a> | Documents (<a href="uploads/jacobdufault_design_document_9_30_2013.pdf">Design</a>, <a href="uploads/jacobdufault_requirements_document_9_30_2013.pdf">Requirements</a>, <a href="uploads/jacobdufault_test_document_9_30_2013.pdf">Test</a>)</td>
 				</tr>
 				<tr>
 					<th>Milestone 2 (October 28th)</th>
