--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				</tr>
 				<tr>
 					<th>Milestone 3 (November 25th)</th>
-					<td>Presentation | Progress Evaluation</td>				
+					<td><a href="uploads/jacobdufault_milestone_3_presentation.pdf">Presentation</a> | <a href="uploads/jacobdufault_milestone_3_evaluation.pdf">Progress Evaluation</a></td>
 				</tr>				
 			</table>
 
