FIles for Jan 22nd presentation

--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
 				</tr>				
 			</table>
 
-		<!--
+		
 		<h3>Second Semester (Spring 2013)</h3>
 			<table>
 				<tr>
-					<th>Plan (September 4th)</th>
-					<td>Plan, Presentation</td>
+					<th>Plan (January 22nd)</th>
+					<td><a href="uploads/jacobdufault_plan_presentation_1_22_2014.pdf">Presentation</a> | <a href="uploads/jacobdufault_plan_1_22_2014.pdf">Plan</a></td>
 				</tr>
+				<!--
 				<tr>
 					<th>Milestone 1</th>
 					<td>Presentation, Documents</td>
@@ -80,9 +81,9 @@
 				<tr>
 					<th>Milestone 3</th>
 					<td>Presentation, Progress Evaluation</td>				
-				</tr>				
+				</tr>
+				-->				
 			</table>
-		-->
 
 	<hr />
 	<div id="credits">
