--- a/index.html
+++ b/index.html
@@ -69,20 +69,18 @@
 					<th>Plan (January 22nd)</th>
 					<td><a href="uploads/jacobdufault_plan_presentation_1_22_2014.pdf">Presentation</a> | <a href="uploads/jacobdufault_plan_1_22_2014.pdf">Plan</a></td>
 				</tr>
-				<!--
 				<tr>
-					<th>Milestone 1</th>
-					<td>Presentation, Documents</td>
+					<th>Milestone 4</th>
+					<td><a href="uploads/jacobdufault_milestone_4_presentation.pdf">Presentation</a>, <a href="uploads/jacobdufault_milestone_4_evaluation.pdf">Progress Evaluation</a></td>
 				</tr>
 				<tr>
-					<th>Milestone 2</th>
+					<th>Milestone 5</th>
 					<td>Presentation, Progress Evaluation, Poster</td>
 				</tr>
 				<tr>
-					<th>Milestone 3</th>
+					<th>Milestone 6</th>
 					<td>Presentation, Progress Evaluation</td>				
 				</tr>
-				-->				
 			</table>
 
 	<hr />
