--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<td>Jacob Dufault</td>				
 				</tr>
 				<tr>
-					<th>CS Faculty Sponser</th>
+					<th>CS Faculty Sponsor</th>
 					<td>Dr. Bernhard</td>				
 				</tr>			
 			</table>
@@ -67,7 +67,7 @@
 			<table>
 				<tr>
 					<th>Plan (January 22nd)</th>
-					<td><a href="uploads/jacobdufault_plan_presentation_1_22_2014.pdf">Presentation</a> | <a href="uploads/jacobdufault_plan_1_22_2014.pdf">Plan</a> | <a href="http://imgur.com/a/yYLEA">Demo</a></td>
+					<td><a href="uploads/jacobdufault_plan_presentation_1_22_2014.pdf">Presentation</a> | <a href="uploads/jacobdufault_plan_1_22_2014.pdf">Plan</a></td>
 				</tr>
 				<tr>
 					<th>Milestone 4</th>
