--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				</tr>
 				<tr>
 					<th>Milestone 5</th>
-					<td>Presentation, Progress Evaluation, Poster</td>
+					<td><a href="uploads/jacobdufault_milestone_5_presentation.pdf">Presentation</a>, <a href="uploads/jacobdufault_milestone_5_evaluation.pdf">Progress Evaluation</a>, <a href="uploads/Showcase2014_POSTER_CSS_Dufault.ppt">Poster</td>
 				</tr>
 				<tr>
 					<th>Milestone 6</th>
