--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<table>
 				<tr>
 					<th>Project Name</th>
-					<td>Better Tower Defense</td>
+					<td>Rethinking Game Architecture with Immutability</td>
 				</tr>
 				<tr>
 					<th>Team Members</th>
